[gd_scene load_steps=5 format=3 uid="uid://bvnebqurtlbh4"]

[ext_resource type="Script" uid="uid://c0pnojeuqabx8" path="res://scripts/phone/options_container.gd" id="1_wre1q"]

[sub_resource type="LabelSettings" id="LabelSettings_dq2sb"]
font_size = 35
shadow_size = 3
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_5fqv8"]
font_size = 35
shadow_size = 3
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_o23y1"]
font_size = 35
shadow_size = 3
shadow_color = Color(0, 0, 0, 1)

[node name="OptionsContainer" type="CenterContainer"]
offset_left = 51.0
offset_top = 94.0
offset_right = 170.0
offset_bottom = 378.0
scale = Vector2(0.95, 0.95)
script = ExtResource("1_wre1q")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MasterVolumeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "Master"
label_settings = SubResource("LabelSettings_dq2sb")

[node name="MVContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MVMuteCheckBox" type="CheckBox" parent="VBoxContainer/MVContainer"]
modulate = Color(0.581033, 0.58103293, 0.5810329, 1)
layout_mode = 2
theme_override_colors/font_color = Color(0.875, 0.875, 0.875, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
theme_override_colors/checkbox_checked_color = Color(1, 1, 1, 1)
theme_override_colors/checkbox_unchecked_color = Color(1, 1, 1, 1)

[node name="MasterVolume" type="HSlider" parent="VBoxContainer/MVContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -40.0
max_value = 0.0
step = 0.1

[node name="Mute" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "Mute"
label_settings = SubResource("LabelSettings_5fqv8")

[node name="MusicVolumeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "Music"
label_settings = SubResource("LabelSettings_o23y1")

[node name="MusicVolume" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
min_value = -40.0
max_value = 0.0
step = 0.1
value = -13.0

[node name="SFXVolumeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 35
text = "SFX"

[node name="SFXVolume" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
min_value = -40.0
max_value = 0.0
step = 0.1

[connection signal="toggled" from="VBoxContainer/MVContainer/MVMuteCheckBox" to="." method="_on_check_box_toggled"]
[connection signal="drag_ended" from="VBoxContainer/MVContainer/MasterVolume" to="." method="_on_master_volume_drag_ended"]
[connection signal="value_changed" from="VBoxContainer/MVContainer/MasterVolume" to="." method="_on_master_volume_value_changed"]
[connection signal="drag_ended" from="VBoxContainer/MusicVolume" to="." method="_on_music_volume_drag_ended"]
[connection signal="value_changed" from="VBoxContainer/MusicVolume" to="." method="_on_music_volume_value_changed"]
[connection signal="drag_ended" from="VBoxContainer/SFXVolume" to="." method="_on_sfx_volume_drag_ended"]
[connection signal="value_changed" from="VBoxContainer/SFXVolume" to="." method="_on_sfx_volume_value_changed"]
